2004-09-28  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: added STARTTLS support for c2s conns
    * pthsock/client.c: same

2004-09-27  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: added STARTTLS support for s2s conns
    * dialback/dialback_out.c: same
    * jabberd/jabberd.h: added support in MIO to enable TLS on existing conn
    * jabberd/mio_ssl.c: same
    * jabberd/mio_xml.c: same
    * jabberd/lib/jabberdlib.h: added namespace decl for STARTTLS feature
    * jsm/modules/mod_auth_plain.c: username check only for updates

2004-09-24  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_auth_digest.c: Bugfix. jabber:iq:register set with empty
	<password/> element made an existing account unusable, as it lost its
	password.
    * jsm/modules/mod_auth_plain.c: same

2004-09-21  Matthias Wimmer  <m@tthias.net>

    * xdb_file/xdb_file.c: Make hashed spool directories optional

2004-09-07  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_offline.c: ignore CDATA between offline <message/>s
    * jsm/modules/mod_roster.c: we lost the pending_in state at a roster set

2004-09-06  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_roster.c: XMPP IM's way to handle subscription states

2004-09-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/config.c: use pmalloco instead of pmalloc_x
    * jabberd/deliver.c: same
    * jabberd/heartbeat.c: same
    * jsm/sessions.c: Added parameter check for js_session_to()/_from()

2004-07-23  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.c: allow clustering of s2s components
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dnsrv/dnsrv.c: same
    * jabber.xml.dist.in: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/base64.c: moved str_b64decode from str.c to base64.c
    * jabberd/lib/str.c: same
    * jabberd/lib/jid.c: free the caching strcuture on server shutdown