@@ -1,3 +1,8 @@
+2004-10-05  Matthias Wimmer  <m@tthias.net>
+
+    * dialback/dialback_in.c: Changed duplicate error messages
+    * dialback/dialback_out.c: same
+
 2004-09-28  Matthias Wimmer  <m@tthias.net>
 
     * jabberd/lib/jabberdlib.h: added STARTTLS support for c2s conns
